--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Landing Page for a fictional arcade.",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass ./sass/main.scss ./css/style.css -w"
+    "compile:sass": "node-sass ./sass/main.scss ./css/style.css -w",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.comp.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,10 @@
   },
   "homepage": "https://github.com/Raf-Batista/ArcadeLandingPage#readme",
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "autoprefixer": "^10.1.0",
+    "concat": "^1.0.3",
+    "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^8.3.0"
   }
 }
